syntax = "proto3";

option java_multiple_files = true;
option java_package = "es.um.sisdist.backend.grpc";

package es.um.sisdist.backend.grpc;

service GrpcService
{
    rpc Ping(PingRequest) returns (PingResponse);
    rpc MapReduce(PerformMapReduceRequest) returns (PerformMapReduceResponse);
}

message PingRequest
{
	int32 v = 1;
}

message PingResponse
{
	int32 v = 1;
}

message PerformMapReduceRequest 
{
  string mapreduce = 1;
  string map = 2;
  string reduce = 3;
}

message PerformMapReduceResponse 
{
  string mapreduce = 1;
}
